# r208-old

./: .gitignore  README.md  index.html  index.php
libpgnp/: Makefile  main  main.c
libpgnp/pgnfile/: example.pgn
program/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.tex  example2.tex  main  main-debug-test.cpp  main.c++  main.cpp  mainlks.cpp  old-Makefile  old-main.cpp
program/output/: example2.tex  output.tex
sources/css/: index.css  loader.css  module.css  root.css
sources/js/: darkmode.js  index.js  loader.js
